2009-08-04  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tkTextDisp.c (TkTextCharLayoutProc): Make the line breaking
	algorithm (in the word-wrap case) do the right thing with non-breaking
	spaces by restricting what we break on to ASCII spaces, which is good
	enough for most purposes.

2009-08-02  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/tkWinClipboard.c Correct check for winNT
	* win/tkWinDialog.c    Eliminate many gcc warnings
	* win/tkWinImage.c:
	* win/tkWinMenu.c:
	* win/tkWinWm.c:
	* win/tkWinX.c:
	* win/ttkWinXPTheme.c: Eliminate msvc warnings
	* win/tcl.m4:
	* win/configure
	* win/.cvsignore:      Prevent files from being checked in by accident

2009-08-01  Donal K. Fellows  <dkf@users.sf.net>

	* unix/tkUnixWm.c (WmIconphotoCmd): [Bug 2830420]: Assemble the image
	for the window manager in a way that doesn't assume we're on a little-
	endian system.

2009-07-27  Donal K. Fellows  <dkf@users.sf.net>

	* doc/GetScroll.3: Reworded and reordered so as to indicate that the
	Tcl_Obj forms are preferred.

2009-07-26  Donal K. Fellows  <dkf@users.sf.net>

	* doc/canvas.n: Corrected description of acceptable join styles.
	Spotted by Emiliano Gavilan.

2009-07-23  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tkSelect.c (HandleTclCommand): [Bug 2441988]: Stop losing
	reports of errors in selection handlers; that's what the background
	error handling code is for.
	*** POTENTIAL INCOMPATIBILITY *** if your code was relying on erroring
	selection scripts being silent.
	(LostSelection, Tk_SelectionObjCmd): Stop using the vastly inefficient
	TkCopyAndGlobalEval; better to use Tcl_Obj refcount management.

2009-07-22  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tkFocus.c (TkFocusDeadWindow): [Bug 2496114]: Ensure that
	focus desynchronization doesn't cause a crash.

2009-07-21  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tkFont.c (TkUnderlineAngledTextLayout): [Bug 2356057]:
	Corrected drawing of rotated underlines.
